--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,11 +26,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
                         </li>
+                        {% if not is_granted('ROLE_USER') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{path('app_login')}}">Connexion</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{path('app_login')}}">Connexion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
+                            {% if is_granted('ROLE_USER') %}
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
