--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,17 +14,20 @@
     <body>
         {% block navbar %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">Sortir.com</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Accueil</a>
+                            <a class="nav-link" href="{{path('app_home')}}">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('app_sorties_index')}}">Sorties</a>
                         </li>
                         {% if not is_granted('ROLE_USER') %}
                             <li class="nav-item">
