--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,6 +20,11 @@
         <label for="password">Password</label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
+        <label>
+            <input type="checkbox" name="_remember_me" checked>
+            Rappelez vous de moi!
+        </label>
+
         <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}"
         >
