--- a/templates/sorties/index.html.twig
+++ b/templates/sorties/index.html.twig
@@ -3,20 +3,20 @@
 {% block title %}Sorties index{% endblock %}
 
 {% block body %}
-    <h1>Sorties index</h1>
+    <h1>Liste des sorties</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Nom</th>
-                <th>Date Debut</th>
+                <th>Date Début</th>
                 <th>Date Fin</th>
                 <th>Durée</th>
-                <th>NbInscriptionsMax</th>
-                <th>DescriptionInfos</th>
-                <th>EtatSortie</th>
-                <th>UrlPhoto</th>
-                <th>actions</th>
+                <th>Inscriptions Max</th>
+                <th>Description</th>
+                <th>État</th>
+                <th>Photo</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -31,8 +31,8 @@
                 <td>{{ sortie.noEtat.libelle }}</td>
                 <td>{{ sortie.urlPhoto }}</td>
                 <td>
-                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">show</a>
-                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">edit</a>
+                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">Détails</a>
+                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -43,5 +43,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_sorties_new') }}">Create new</a>
+    <a href="{{ path('app_sorties_new') }}">Nouvelle sortie</a>
 {% endblock %}
