--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -8,19 +8,15 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ sortie.id }}</td>
-            </tr>
-            <tr>
                 <th>Nom</th>
                 <td>{{ sortie.nom }}</td>
             </tr>
             <tr>
-                <th>DateDebut</th>
+                <th>Date de Début</th>
                 <td>{{ sortie.dateDebut ? sortie.dateDebut|date('d-m-Y H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>DateCloture</th>
+                <th>Date de Clôture</th>
                 <td>{{ sortie.dateCloture ? sortie.dateCloture|date('d-m-Y H:i:s') : '' }}</td>
             </tr>
             <tr>
@@ -28,19 +24,19 @@
                 <td>{{ sortie.duree }}</td>
             </tr>
             <tr>
-                <th>NbInscriptionsMax</th>
+                <th>Inscriptions Max</th>
                 <td>{{ sortie.nbInscriptionsMax }}</td>
             </tr>
             <tr>
-                <th>DescriptionInfos</th>
+                <th>Description</th>
                 <td>{{ sortie.descriptionInfos }}</td>
             </tr>
             <tr>
-                <th>EtatSortie</th>
-                <td>{{ sortie.etatSortie }}</td>
+                <th>État de la Sortie</th>
+                <td>{{ sortie.noEtat.libelle }}</td>
             </tr>
             <tr>
-                <th>UrlPhoto</th>
+                <th>Photo</th>
                 <td>{{ sortie.urlPhoto }}</td>
             </tr>
         </tbody>
