Ajout de style sur les liens

--- a/templates/sorties/index.html.twig
+++ b/templates/sorties/index.html.twig
@@ -31,8 +31,8 @@
                 <td>{{ sortie.noEtat.libelle }}</td>
                 <td>{{ sortie.urlPhoto }}</td>
                 <td>
-                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">Détails</a>
-                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Modifier</a>
+                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}" class="btn btn-primary">Détails</a>
+                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-primary">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -43,5 +43,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_sorties_new') }}">Nouvelle sortie</a>
+    <a href="{{ path('app_sorties_new') }}" class="btn btn-primary">Nouvelle sortie</a>
 {% endblock %}
