--- a/templates/sorties/edit.html.twig
+++ b/templates/sorties/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('sorties/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_sorties_index') }}">back to list</a>
+    <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">back to list</a>
 
     {{ include('sorties/_delete_form.html.twig') }}
 {% endblock %}
