--- a/templates/sorties/new.html.twig
+++ b/templates/sorties/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('sorties/_form.html.twig') }}
 
-    <a href="{{ path('app_sorties_index') }}">back to list</a>
+    <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">back to list</a>
 {% endblock %}
