--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_sorties_index') }}">Retour à la liste</a>
+    <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">Retour à la liste</a>
 
-    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Modifier</a>
+    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-primary">Modifier</a>
 
     {{ include('sorties/_delete_form.html.twig') }}
 {% endblock %}
