--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     <body>
         {% block navbar %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Sortir.com</a>
+                <a class="navbar-brand" href="{{path('app_home')}}">Sortir.com</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,11 +34,14 @@
                                 <a class="nav-link" href="{{path('app_login')}}">Connexion</a>
                             </li>
                         {% endif %}
+                        {% if is_granted('ROLE_USER') %}
                         <li class="nav-item">
-                            {% if is_granted('ROLE_USER') %}
-                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
-                            {% endif %}
+                                <a class="nav-link" href="{{ path('app_user')}}">Mon Profil</a>
                         </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                        </li>
+                            {% endif %}
                     </ul>
                 </div>
             </nav>
