--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,64 +3,67 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
+    <div class="example-wrapper">
+        <h1>Sorties du fond</h1>
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDdlNnMyZ3VrOXd4dnlsNWRwNzJwbmdoeDIwNjF1dWRzaDR0ajFhbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/kwCJA19mepUJSbAebj/giphy.webp" alt="">
+    </div>
 
+    <!-- Nouveau bouton pour ajouter des lieux -->
+    <div class="add-location-button">
+        <a href="{{ path('app_lieux_new') }}">
+            <input class="bouton" type="button" value="Ajouter un lieu">
+        </a>
+    </div>
 
-<div class="example-wrapper">
-    <h1>Sorties du fond</h1>
-    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDdlNnMyZ3VrOXd4dnlsNWRwNzJwbmdoeDIwNjF1dWRzaDR0ajFhbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/kwCJA19mepUJSbAebj/giphy.webp" alt="">
-</div>
+    <div class="container_filtre">
+        <div class="filtrer_les_sorties">
+            <p>Site :</p>
+            <select name="Villes">
+                <option value="rien" selected="true">Sélectionnez votre ville</option>
+                <option value="rennes">Rennes</option>
+                <option value="nantes">Nantes</option>
+                <option value="niort">Niort</option>
+                <option value="quimper">Quimper</option>
+            </select>
 
-        <div class="container_filtre">
-            <div class="filtrer_les_sorties">
-                <p>Site :</p>
-                <select name="Villes">
-                    <option value="rien" selected="true">Sélectionnez votre ville</option>
-                    <option value="rennes">Rennes</option>
-                    <option value="nantes">Nantes</option>
-                    <option value="niort">Niort</option>
-                    <option value="quimper">Quimper</option>
-                </select>
-
-                <p>Le nom de la sortie contient : <input type="search" id="site_search" /></p>
-
-            </div>
-
-            <div>
-                <p>Entre {{ "now"|date("d/m/Y") }}</p>
-                <input type="date" id="start" name="trip-start" min="2024-01-01" max="2024-12-31" />
-                <p>et </p>
-                <input type="date" id="start" name="trip-start" min="2024-01-01" max="2024-12-31" />
-            </div>
-            <div class="btn_check">
-                <fieldset>
-                    <legend>Sur quelle sortie souhaites tu faire ta recherche :</legend>
-
-                    <div>
-                        <input type="checkbox" id="organisateur" name="organisateur" checked />
-                        <label for="organisateur">Sorties dont je suis l'organisateur/trice.</label>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" id="inscrit" name="inscrit" />
-                        <label for="inscrit">Sortie auquelles je suis inscrit/e.</label>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" id="non_inscrit" name="non_inscrit" />
-                        <label for="non_inscrit">Sortie auquelles je ne suis pas inscrit/e.</label>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" id="passe" name="passe" />
-                        <label for="passe">Sortie passées.</label>
-                    </div>
-                </fieldset>
-            </div>
-            <div>
-                <input class="bouton" type="button" value="Rechercher" />
-            </div>
-
+            <p>Le nom de la sortie contient : <input type="search" id="site_search" /></p>
         </div>
+
+        <div>
+            <p>Entre {{ "now"|date("d/m/Y") }}</p>
+            <input type="date" id="start" name="trip-start" min="2024-01-01" max="2024-12-31" />
+            <p>et </p>
+            <input type="date" id="start" name="trip-start" min="2024-01-01" max="2024-12-31" />
+        </div>
+        <div class="btn_check">
+            <fieldset>
+                <legend>Sur quelle sortie souhaites tu faire ta recherche :</legend>
+
+                <div>
+                    <input type="checkbox" id="organisateur" name="organisateur" checked />
+                    <label for="organisateur">Sorties dont je suis l'organisateur/trice.</label>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="inscrit" name="inscrit" />
+                    <label for="inscrit">Sortie auxquelles je suis inscrit/e.</label>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="non_inscrit" name="non_inscrit" />
+                    <label for="non_inscrit">Sortie auxquelles je ne suis pas inscrit/e.</label>
+                </div>
+
+                <div>
+                    <input type="checkbox" id="passe" name="passe" />
+                    <label for="passe">Sorties passées.</label>
+                </div>
+            </fieldset>
+        </div>
+        <div>
+            <input class="bouton" type="button" value="Rechercher" />
+        </div>
+    </div>
 
     <h1>Sorties index</h1>
 
@@ -75,7 +78,7 @@
             <th>DescriptionInfos</th>
             <th>EtatSortie</th>
             <th>UrlPhoto</th>
-            <th>actions</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -90,8 +93,8 @@
                 <td>{{ sortie.noEtat.libelle }}</td>
                 <td>{{ sortie.urlPhoto }}</td>
                 <td>
-                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">show</a>
-                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">edit</a>
+                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">Show</a>
+                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Edit</a>
                 </td>
             </tr>
         {% else %}
