Logique inscription à une activité

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,11 @@
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}">{{ message }}</div>
+            {% endfor %}
+        {% endfor %}
     </head>
     <body>
         {% block navbar %}
