--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -46,5 +46,9 @@
 
     <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-primary">Modifier</a>
 
+    <a href="{{ path('app_sorties_inscription', {'id': sortie.id}) }}" class="btn btn-primary">S'inscrire</a>
+
+    <a href="#" class="btn btn-primary">Se désinscrire</a>
+
     {{ include('sorties/_delete_form.html.twig') }}
 {% endblock %}
