--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,11 @@
                                 <a class="nav-link" href="{{path('app_login')}}">Connexion</a>
                             </li>
                         {% endif %}
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_admin')}}">Administration</a>
+                            </li>
+                        {% endif %}
                         {% if is_granted('ROLE_USER') %}
                         <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_user')}}">Mon Profil</a>
@@ -47,6 +52,7 @@
                                 <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
                         </li>
                             {% endif %}
+
                     </ul>
                 </div>
             </nav>
