gestion ville crud et lieux crud

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,107 +3,107 @@
 {% block title %}Sortir.com{% endblock %}
 
 {% block body %}
-    <div class="example-wrapper">
-        <h1>Sorties du fond</h1>
-        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDdlNnMyZ3VrOXd4dnlsNWRwNzJwbmdoeDIwNjF1dWRzaDR0ajFhbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/kwCJA19mepUJSbAebj/giphy.webp" alt="">
-    </div>
+    <div class="container">
+        <header>
+            <h1>Sorties du fond</h1>
+            <img src="https://media1.tenor.com/m/ja8IxnUdncsAAAAd/william-saliba-arsenal.gif" alt="Illustration" class="header-image">
+        </header>
 
-    <!-- Nouveau bouton pour ajouter des lieux -->
-    <div class="add-location-button">
-        <a href="{{ path('app_lieux_new') }}">
-            <input class="bouton" type="button" value="Ajouter un lieu">
-        </a>
-    </div>
+        <section class="filters">
+            <div class="filter-group">
 
-    <div class="container_filtre">
-        <div class="filtrer_les_sorties">
-            <p>Site :</p>
-            <select name="Villes">
-                <option value="rien" selected="true">Sélectionnez votre ville</option>
-                <option value="rennes">Rennes</option>
-                <option value="nantes">Nantes</option>
-                <option value="niort">Niort</option>
-                <option value="quimper">Quimper</option>
-            </select>
+            </div>
+            <p>Choisir une ville</p>
+                <select>
 
+                {% for ville in villes %}
+                    <option>{{ ville.nomVille }}</option>
+
+                {% endfor %}
+                </select>
             <p>Le nom de la sortie contient : <input type="search" id="site_search" /></p>
-        </div>
 
-        <div>
-            <p>Entre {{ "now"|date("d/m/Y") }}</p>
-            <input type="date" id="start" name="trip-start" min="2024-01-01" max="2024-12-31" />
-            <p>et </p>
-            <input type="date" id="start" name="trip-start" min="2024-01-01" max="2024-12-31" />
-        </div>
-        <div class="btn_check">
-            <fieldset>
-                <legend>Sur quelle sortie souhaites tu faire ta recherche :</legend>
 
+                <label for="site_search">Nom de la sortie contient :</label>
+                <input type="search" id="site_search" placeholder="Rechercher...">
+
+                <label for="start-date">Date entre :</label>
+                <input type="date" id="start-date" name="start-date">
+                <label for="end-date">et</label>
+                <input type="date" id="end-date" name="end-date">
+            </div>
+
+            <fieldset class="checkbox-group">
+                <legend>Filtrer par :</legend>
                 <div>
-                    <input type="checkbox" id="organisateur" name="organisateur" checked />
-                    <label for="organisateur">Sorties dont je suis l'organisateur/trice.</label>
+                    <input type="checkbox" id="organisateur" name="organisateur" checked>
+                    <label for="organisateur">Sorties dont je suis l'organisateur/trice</label>
                 </div>
 
                 <div>
-                    <input type="checkbox" id="inscrit" name="inscrit" />
-                    <label for="inscrit">Sortie auxquelles je suis inscrit/e.</label>
+                    <input type="checkbox" id="inscrit" name="inscrit">
+                    <label for="inscrit">Sorties auxquelles je suis inscrit/e</label>
                 </div>
 
                 <div>
-                    <input type="checkbox" id="non_inscrit" name="non_inscrit" />
-                    <label for="non_inscrit">Sortie auxquelles je ne suis pas inscrit/e.</label>
+                    <input type="checkbox" id="non_inscrit" name="non_inscrit">
+                    <label for="non_inscrit">Sorties auxquelles je ne suis pas inscrit/e</label>
                 </div>
 
                 <div>
-                    <input type="checkbox" id="passe" name="passe" />
-                    <label for="passe">Sorties passées.</label>
+                    <input type="checkbox" id="passe" name="passe">
+                    <label for="passe">Sorties passées</label>
                 </div>
             </fieldset>
-        </div>
-        <div>
-            <input class="bouton" type="button" value="Rechercher" />
+            <button class="button">Rechercher</button>
+        </section>
+
+        <section class="sorties-list">
+            <h2>Sorties</h2>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Date Début</th>
+                    <th>Date Fin</th>
+                    <th>Durée</th>
+                    <th>Nb Max Inscriptions</th>
+                    <th>Description</th>
+                    <th>État</th>
+                    <th>Photo</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for sortie in sorties %}
+                    <tr>
+                        <td>{{ sortie.nom }}</td>
+                        <td>{{ sortie.dateDebut ? sortie.dateDebut|date('d-m-Y H:i') : '' }}</td>
+                        <td>{{ sortie.dateCloture ? sortie.dateCloture|date('d-m-Y H:i') : '' }}</td>
+                        <td>{{ sortie.duree }}</td>
+                        <td>{{ sortie.nbInscriptionsMax }}</td>
+                        <td>{{ sortie.descriptionInfos }}</td>
+                        <td>{{ sortie.noEtat.libelle }}</td>
+                        <td><img src="{{ sortie.urlPhoto }}" alt="Photo de {{ sortie.nom }}" class="sortie-photo"></td>
+                        <td>
+                            <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">Afficher</a> |
+                            <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Éditer</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="9">Aucune sortie trouvée</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </section>
+
+        <!-- Boutons placés en bas de page -->
+        <div class="button-group-bottom">
+            <a href="{{ path('app_lieux_new') }}" class="button">Ajouter un lieu</a>
+            <a href="{{ path('app_sorties_new') }}" class="button">Créer une nouvelle sortie</a>
+            <a href="{{ path('app_ajouter_villes_new') }}" class="button">Ajouter une ville</a>
         </div>
     </div>
-
-    <h1>Sorties index</h1>
-
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Date Debut</th>
-            <th>Date Fin</th>
-            <th>Durée</th>
-            <th>NbInscriptionsMax</th>
-            <th>DescriptionInfos</th>
-            <th>EtatSortie</th>
-            <th>UrlPhoto</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for sortie in sorties %}
-            <tr>
-                <td>{{ sortie.nom }}</td>
-                <td>{{ sortie.dateDebut ? sortie.dateDebut|date('d-m-Y H:i') : '' }}</td>
-                <td>{{ sortie.dateCloture ? sortie.dateCloture|date('d-m-Y H:i') : '' }}</td>
-                <td>{{ sortie.duree }}</td>
-                <td>{{ sortie.nbInscriptionsMax }}</td>
-                <td>{{ sortie.descriptionInfos }}</td>
-                <td>{{ sortie.noEtat.libelle }}</td>
-                <td>{{ sortie.urlPhoto }}</td>
-                <td>
-                    <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}">Show</a>
-                    <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="10">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_sorties_new') }}"><input class="bouton" type="button" value="Create new"></a>
 {% endblock %}
