Il est pas beau notre site la ?

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -100,10 +100,10 @@
         </section>
 
         <!-- Boutons placés en bas de page -->
-        <div class="button-group-bottom">
-            <a href="{{ path('app_lieux_new') }}" class="button">Ajouter un lieu</a>
-            <a href="{{ path('app_sorties_new') }}" class="button">Créer une nouvelle sortie</a>
-            <a href="{{ path('app_ajouter_villes_new') }}" class="button">Ajouter une ville</a>
+        <div class="d-flex justify-content-center">
+            <a href="{{ path('app_lieux_new') }}" class="btn btn-primary ms-2">Ajouter un lieu</a>
+            <a href="{{ path('app_sorties_new') }}" class="btn btn-primary ms-2">Créer une nouvelle sortie</a>
+            <a href="{{ path('app_ajouter_villes_new') }}" class="btn btn-primary ms-2">Ajouter une ville</a>
         </div>
     </div>
 {% endblock %}
