--- a/templates/lieux/edit.html.twig
+++ b/templates/lieux/edit.html.twig
@@ -3,11 +3,29 @@
 {% block title %}Edit Lieux{% endblock %}
 
 {% block body %}
-    <h1>Edit Lieux</h1>
+    <h1 class="d-flex justify-content-center">Modifier le lieu</h1>
 
-    {{ include('lieux/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                {{ form_start(form) }}
+                {{ form_row(form.nomLieu) }}
+                <div class="row">
+                    <div class="col">{{ form_row(form.latitude) }}</div>
+                    <div class="col">{{ form_row(form.longitude) }}</div>
+                </div>
+                {{ form_row(form.rue) }}
+                {{ form_row(form.noVille) }}
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-primary ms-2" href="{{ path('app_lieux_index') }}">Liste des lieux</a>
+                    {{ form_end(form) }}
+                    {{ include('lieux/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_lieux_index') }}">back to list</a>
 
-    {{ include('lieux/_delete_form.html.twig') }}
+
+
 {% endblock %}
