--- a/templates/ajouter_villes/edit.html.twig
+++ b/templates/ajouter_villes/edit.html.twig
@@ -3,11 +3,20 @@
 {% block title %}Edit Villes{% endblock %}
 
 {% block body %}
-    <h1>Edit Villes</h1>
+    <h1 class="d-flex justify-content-center">Modifier ville</h1>
 
-    {{ include('ajouter_villes/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_ajouter_villes_index') }}">back to list</a>
-
-    {{ include('ajouter_villes/_delete_form.html.twig') }}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                {{ form_start(form) }}
+                {{ form_row(form.nomVille) }}
+                {{ form_row(form.codePostal) }}
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_index') }}">Liste des villes</a>
+                    {{ form_end(form) }}
+                    {{ include('ajouter_villes/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
