--- a/templates/ajouter_villes/index.html.twig
+++ b/templates/ajouter_villes/index.html.twig
@@ -3,35 +3,43 @@
 {% block title %}Villes index{% endblock %}
 
 {% block body %}
-    <h1>Villes index</h1>
+    <h1 class="d-flex justify-content-center">Liste des villes</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>NomVille</th>
-                <th>CodePostal</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for ville in villes %}
-            <tr>
-                <td>{{ ville.id }}</td>
-                <td>{{ ville.nomVille }}</td>
-                <td>{{ ville.codePostal }}</td>
-                <td>
-                    <a href="{{ path('app_ajouter_villes_show', {'id': ville.id}) }}">show</a>
-                    <a href="{{ path('app_ajouter_villes_edit', {'id': ville.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Nom de la Ville</th>
+                        <th>Code Postal</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for ville in villes %}
+                        <tr>
+                            <td>{{ ville.nomVille }}</td>
+                            <td>{{ ville.codePostal }}</td>
+                            <td>
+                                <a class="btn btn-primary ms-2"
+                                   href="{{ path('app_ajouter_villes_show', {'id': ville.id}) }}">Détails</a>
+                                <a class="btn btn-primary ms-2"
+                                   href="{{ path('app_ajouter_villes_edit', {'id': ville.id}) }}">Modifier</a>
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="4">no records found</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_ajouter_villes_new') }}">Create new</a>
+    <div class="d-flex justify-content-center">
+        <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_new') }}">Ajouter une ville</a>
+    </div>
 {% endblock %}
