--- a/templates/ajouter_villes/new.html.twig
+++ b/templates/ajouter_villes/new.html.twig
@@ -3,9 +3,22 @@
 {% block title %}New Villes{% endblock %}
 
 {% block body %}
-    <h1>Create new Villes</h1>
+    <h1 class="d-flex justify-content-center">Créer une nouvelle ville</h1>
 
-    {{ include('ajouter_villes/_form.html.twig') }}
+    {# {{ include('ajouter_villes/_form.html.twig') }} #}
 
-    <a href="{{ path('app_ajouter_villes_index') }}">back to list</a>
+    {{ form_start(form) }}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-2">
+        <div class="col">{{ form_row(form.nomVille) }}</div>
+        <div class="col">{{ form_row(form.codePostal) }}</div>
+    </div>
+    </div>
+</div>
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary">Enregistrer</button>
+        <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_index') }}">Liste des villes</a>
+    </div>
+    {{ form_end(form) }}
 {% endblock %}
