--- a/templates/ajouter_villes/show.html.twig
+++ b/templates/ajouter_villes/show.html.twig
@@ -3,28 +3,29 @@
 {% block title %}Villes{% endblock %}
 
 {% block body %}
-    <h1>Villes</h1>
+    <h1 class="d-flex justify-content-center">Ville</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ ville.id }}</td>
-            </tr>
-            <tr>
-                <th>NomVille</th>
-                <td>{{ ville.nomVille }}</td>
-            </tr>
-            <tr>
-                <th>CodePostal</th>
-                <td>{{ ville.codePostal }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-2">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th>Nom</th>
+                        <td>{{ ville.nomVille }}</td>
+                    </tr>
+                    <tr>
+                        <th>Code Postal</th>
+                        <td>{{ ville.codePostal }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_ajouter_villes_index') }}">back to list</a>
-
-    <a href="{{ path('app_ajouter_villes_edit', {'id': ville.id}) }}">edit</a>
-
-    {{ include('ajouter_villes/_delete_form.html.twig') }}
+    <div class="d-flex justify-content-center">
+        <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_index') }}">Liste des villes</a>
+        <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_edit', {'id': ville.id}) }}">Modifier</a>
+    </div>
 {% endblock %}
