--- a/templates/lieux/_delete_form.html.twig
+++ b/templates/lieux/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_lieux_delete', {'id': lieux.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_lieux_delete', {'id': lieux.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer ce lieu ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ lieux.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger ms-2">Supprimer</button>
 </form>
