--- a/templates/sorties/edit.html.twig
+++ b/templates/sorties/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit Sorties{% endblock %}
 
 {% block body %}
-    <h1>Edit Sorties</h1>
+    <h1 class="d-flex justify-content-center">Modifier la sortie</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                {{ include('sorties/_form.html.twig') }}
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-primary" href="{{ path('app_sorties_index') }}">Liste des sorties</a>
+                    {{ include('sorties/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 
-    {{ include('sorties/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">back to list</a>
-
-    {{ include('sorties/_delete_form.html.twig') }}
 {% endblock %}
