--- a/templates/participant/edit.html.twig
+++ b/templates/participant/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Participant</h1>
 
-    {{ include('participant/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('participant/_form.roleAdmin.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('app_participant_index') }}" class="btn btn-primary">back to list</a>
 
